change the tab order

--- a/qt_design/main_window.ui
+++ b/qt_design/main_window.ui
@@ -66,7 +66,7 @@
        <number>1</number>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="homePage">
        <layout class="QGridLayout" name="gridLayout_4" rowstretch="1,1" columnstretch="1,1">
@@ -1349,7 +1349,7 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>649</width>
+                 <width>714</width>
                  <height>395</height>
                 </rect>
                </property>
@@ -1616,8 +1616,8 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>657</width>
-                 <height>308</height>
+                 <width>724</width>
+                 <height>314</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_12">
@@ -1988,8 +1988,8 @@ QScrollBar::sub-line:vertical {
                <property name="geometry">
                 <rect>
                  <x>0</x>
-                 <y>0</y>
-                 <width>649</width>
+                 <y>-118</y>
+                 <width>716</width>
                  <height>434</height>
                 </rect>
                </property>
@@ -2378,8 +2378,8 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>623</width>
-                 <height>266</height>
+                 <width>724</width>
+                 <height>314</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_14">
@@ -2739,8 +2739,8 @@ QScrollBar::sub-line:vertical {
                <property name="geometry">
                 <rect>
                  <x>0</x>
-                 <y>0</y>
-                 <width>690</width>
+                 <y>-69</y>
+                 <width>714</width>
                  <height>383</height>
                 </rect>
                </property>
@@ -3314,8 +3314,8 @@ QScrollBar::sub-line:vertical {
                <property name="geometry">
                 <rect>
                  <x>0</x>
-                 <y>0</y>
-                 <width>642</width>
+                 <y>-376</y>
+                 <width>716</width>
                  <height>706</height>
                 </rect>
                </property>
@@ -6020,6 +6020,7 @@ border-color: rgb(50,50,50);}</string>
   <tabstop>fan_temperature_slider</tabstop>
   <tabstop>admin_scroll_area</tabstop>
   <tabstop>passcodeLineEdit</tabstop>
+  <tabstop>naloxonePasscodeLineEdit</tabstop>
   <tabstop>allowParamedicsCheckBox</tabstop>
   <tabstop>adminPhoneNumberLineEdit</tabstop>
   <tabstop>callTestPushButton</tabstop>
@@ -6032,7 +6033,19 @@ border-color: rgb(50,50,50);}</string>
   <tabstop>disarmPushButton</tabstop>
   <tabstop>exitPushButton</tabstop>
   <tabstop>manual_textedit</tabstop>
+  <tabstop>passcodeEnterLineEdit</tabstop>
+  <tabstop>passcodeEnterPushButton</tabstop>
+  <tabstop>paramedic_phone_number_lineedit</tabstop>
+  <tabstop>get_passcode_button</tabstop>
+  <tabstop>notify_admin_button</tabstop>
   <tabstop>forgotPasswordPushButton</tabstop>
+  <tabstop>passcodeManual</tabstop>
+  <tabstop>alarmMutePushButton</tabstop>
+  <tabstop>notify_admin_button_2</tabstop>
+  <tabstop>replace_naloxone_button_2</tabstop>
+  <tabstop>doorOpenResetPushButton</tabstop>
+  <tabstop>stopCountdownPushButton</tabstop>
+  <tabstop>call911NowPushButton</tabstop>
   <tabstop>dashboardPushButton</tabstop>
   <tabstop>homePushButton</tabstop>
   <tabstop>settingsPushButton</tabstop>
