--- a/qt_design/main_window.ui
+++ b/qt_design/main_window.ui
@@ -48,7 +48,7 @@
     <item row="2" column="0" colspan="2">
      <widget class="QFrame" name="shortcut_frame">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
@@ -56,6 +56,12 @@
       <property name="minimumSize">
        <size>
         <width>0</width>
+        <height>60</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
         <height>60</height>
        </size>
       </property>
